# TODO_list_QT

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  message.cpp  message.h  networkclient.cpp  networkclient.h  serializer.cpp  serializer.h  task.cpp  task.h  taskmanager.cpp  taskmanager.h  taskserver.cpp  taskserver.h
